--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+## pointillism 0.2.2 (2018-12-22)
+
+
+## pointillism 0.2.1 (2018-12-01)
+
+
+## pointillism 0.2.0 (2018-11-15)
+
+
 ## pointilism 0.1.3 (2018-08-26)
 
 ### Major changes
