--- a/NEWS
+++ b/NEWS
@@ -1,16 +1,25 @@
+## pointillism 0.2.5 (2019-03-20)
+
+
+
 ## pointillism 0.2.4 (2019-01-24)
+
 
 
 ## pointillism 0.2.3 (2019-01-08)
 
 
+
 ## pointillism 0.2.2 (2018-12-22)
+
 
 
 ## pointillism 0.2.1 (2018-12-01)
 
 
+
 ## pointillism 0.2.0 (2018-11-15)
+
 
 
 ## pointilism 0.1.3 (2018-08-26)
@@ -37,6 +46,7 @@
 - Updated example data script and resaved.
 
 
+
 ## pointillism 0.1.2 (2018-08-22)
 
 ### New functions
@@ -57,6 +67,7 @@
   code handling.
 
 
+
 ## pointillism 0.1.1 (2018-08-20)
 
 ### New functions
@@ -70,9 +81,11 @@
   calculations applied. Now it doesn't attempt to keep only the `counts` assay.
 
 
+
 ## pointillism 0.1.0 (2018-08-10)
 
 - Initial release.
+
 
 
 [ggplot2]: https://ggplot2.tidyverse.org
