--- a/inst/rmarkdown/templates/seurat-markers/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/seurat-markers/skeleton/skeleton.Rmd
@@ -1,46 +1,101 @@
 ---
-title: "Seurat Markers"
+params:
+  title: "Seurat Markers"
+  
+  # Use a SingleCellExperiment coerced from Seurat.
+  sce_file: "data/YYYY-MM-DD/sce.rds"
+  
+  markers_file: "data/YYYY-MM-DD/markers.rds"
+  cell_type_markers_file: NULL
+  organism: "Homo sapiens"
+  
+  # Use dark mode theme (`theme_midnight()`) for plots.
+  dark: FALSE
+  
+  data_dir: !r file.path("rds", Sys.Date())
+  results_dir: !r file.path("results", Sys.Date(), "markers")
+
+title: "`r params$title`"
 author: "`r getOption('author')`"
 date: "`r Sys.Date()`"
 bibliography: bibliography.bib
-params:
-  sce_file: "data/YYYY-MM-DD/sce.rda"
-  markers_file: "data/YYYY-MM-DD/markers.rda"
-  cell_type_markers_file: NULL
-  organism: "Homo sapiens"
-  dark: FALSE
-  data_dir: !r file.path("data", Sys.Date())
-  results_dir: !r file.path("results", Sys.Date(), "markers")
 ---
 
 ```{r setup, cache=FALSE, message=FALSE}
-# Last modified 2018-08-20
+# Last modified 2019-04-17
 
-# Highly recommended to run this template on an HPC cluster
-# stopifnot(detectHPC())
-
-bcbioSingleCell::prepareSingleCellTemplate()
-source("_setup.R")
-library(pointillism)
 library(Seurat)
+library(pointillism)
+prepareTemplate(package = "pointillism")
+source("_setup.R")
 
-# Directory paths
+# Create directories.
 dir.create(params$results_dir, recursive = TRUE, showWarnings = FALSE)
 
-# Load SingleCellExperiment coerced from seurat object (more memory efficient)
-sce_name <- load(params$sce_file)
-sce <- get(sce_name, inherits = FALSE)
-stopifnot(is(sce, "SingleCellExperiment"))
+# knitr arguments (for `rmarkdown::render()` looping)
+# > opts_chunk$set(
+# >     cache.path = paste(
+# >         sce_name,
+# >         "markers",
+# >         "cache/",
+# >         sep = "_"
+# >     ),
+# >     fig.path = paste(
+# >         sce_name,
+# >         "markers",
+# >         "files/",
+# >         sep = "_"
+# >     )
+# > )
+```
+
+```{r header, child="_header.Rmd"}
+```
+
+# Load SingleCellExperiment object
+
+Use a `SingleCellExperiment` object coerced from `Seurat` as input.
+This is more memory efficient than using a `Seurat` object directly.
+
+```{r load-sce}
+stopifnot(file.exists(params$sce_file))
+if (fileExt(params$sce_file) == "rds") {
+    sce <- readRDS(file = params$sce_file)
+    name <- basenameSansExt(params$sce_file)
+} else if (fileExt(params$sce_file) == "rda") {
+    name <- load(file = params$sce_file)
+    sce <- get(x = name, inherits = FALSE)
+}
+stopifnot(
+    is(sce, "SingleCellExperiment"),
+    is.character(name)
+)
 invisible(validObject(sce))
-# Require that the object contains logcounts
+print(sce)
+
+# Require that the object contains logcounts.
 stopifnot("logcounts" %in% assayNames(sce))
 stopifnot(!is.null(logcounts(sce)))
+```
 
-# Load Seurat markers data.frame
+# Differential expression
+
+Seurat can help you find markers that define clusters via differential expression. By default, it identifes positive and negative markers of a single cluster (specified in `ident.1`), compared to all other cells. `FindAllMarkers()` automates this process for all clusters, but you can also test groups of clusters vs. each other, or against all cells.
+
+The `min.pct` argument requires a gene to be detected at a minimum percentage in either of the two groups of cells, and the `thresh.test` argument requires a gene to be differentially expressed (on average) by some amount between the two groups. You can set both of these to 0, but with a dramatic increase in time - since this will test a large number of genes that are unlikely to be highly discriminatory. As another option to speed up these computations, `max.cells.per.ident` can be set. This will downsample each identity class to have no more cells than whatever this is set to. While there is generally going to be a loss in power, the speed increases can be significiant and the most highly differentially expressed genes will likely still rise to the top.
+
+Seurat has multiple tests for differential expression which can be set with the `test.use` parameter. Currently it defaults to Wilcoxon rank sum test ("`wilcox`"), which tends to overreport significant markers. Instead we currently recommend using MAST (Finak et al, Genome Biology, 2015) or DESeq2 (Love et al, Genome Biology, 2014).
+
+It is recommended to run this calculation as a seprate R script outside of R Markdown, since it can take a long time for large datasets.
+
+First, import the unmodified Seurat `FindAllMarkers()` `data.frame` return.
+
+```{r load-seurat-markers}
 markers_name <- load(params$markers_file)
 markers <- get(markers_name, inherits = FALSE)
 stopifnot(is.data.frame(markers))
-# Keep a backup of the original data.frame
+
+# Keep a backup of the original data.frame.
 markers_original <- markers
 
 # Default to using our internal cell type markers, managed on Google Sheets.
@@ -63,45 +118,15 @@ assignAndSaveData(
     object = cell_type_markers,
     dir = params$data_dir
 )
-
-# knitr arguments (for `rmarkdown::render()` looping)
-# opts_chunk$set(
-#     cache.path = paste(
-#         sce_name,
-#         "markers",
-#         "cache/",
-#         sep = "_"
-#     ),
-#     fig.path = paste(
-#         sce_name,
-#         "markers",
-#         "files/",
-#         sep = "_"
-#     )
-# )
 ```
 
-```{r header, child="_header.Rmd"}
-```
+Here we are sanitizing the markers return, and adding additional metadata.
 
-# Differential expression
-
-Seurat can help you find markers that define clusters via differential expression. By default, it identifes positive and negative markers of a single cluster (specified in `ident.1`), compared to all other cells. `FindAllMarkers()` automates this process for all clusters, but you can also test groups of clusters vs. each other, or against all cells.
-
-The `min.pct` argument requires a gene to be detected at a minimum percentage in either of the two groups of cells, and the `thresh.test` argument requires a gene to be differentially expressed (on average) by some amount between the two groups. You can set both of these to 0, but with a dramatic increase in time - since this will test a large number of genes that are unlikely to be highly discriminatory. As another option to speed up these computations, `max.cells.per.ident` can be set. This will downsample each identity class to have no more cells than whatever this is set to. While there is generally going to be a loss in power, the speed increases can be significiant and the most highly differentially expressed genes will likely still rise to the top.
-
-Seurat has multiple tests for differential expression which can be set with the `test.use` parameter. Currently it defaults to Wilcoxon rank sum test ("`wilcox`"), which tends to overreport significant markers. Instead we currently recommend using MAST (Finak et al, Genome Biology, 2015) or DESeq2 (Love et al, Genome Biology, 2014).
-
-It is recommended to run this calculation as a seprate R script outside of R Markdown, since it can take a long time for large datasets.
-
-```{r sanitize_markers}
-# Run the marker calculation externally in a separate script
-# help("FindAllMarkers", "Seurat")
-
+```{r sanitize-seurat-markers}
 rowRanges <- rowRanges(seurat)
 stopifnot("geneName" %in% colnames(mcols(rowRanges)))
 
-# Sanitize the markers data.frame and include gene metadata
+# Sanitize the markers data.frame and include gene metadata.
 all_markers <- sanitizeSeuratMarkers(
     data = all_markers,
     rowRanges = rowRanges
@@ -122,11 +147,11 @@ write_csv(
 
 # Top markers per cluster {.tabset}
 
-```{r top_markers}
+```{r top-markers}
 topMarkers(markers)
 ```
 
-```{r plot_top_markers, results="asis"}
+```{r plot-top-markers, results="asis"}
 plotTopMarkers(
     object = sce,
     markers = markers,
@@ -137,7 +162,7 @@ plotTopMarkers(
 
 # Known cell type markers {.tabset}
 
-```{r known_markers_detected}
+```{r known-markers-detected}
 known_markers_detected <- knownMarkersDetected(
     all = all_markers,
     known = cell_type_markers
@@ -150,7 +175,7 @@ assignAndSaveData(
 known_markers_detected
 ```
 
-```{r plot_known_markers_detected, results="asis"}
+```{r plot-known-markers-detected, results="asis"}
 plotKnownMarkersDetected(
     object = sce,
     markers = known_markers_detected,
@@ -161,7 +186,7 @@ plotKnownMarkersDetected(
 
 # Cell types per cluster {.tabset}
 
-```{r cell_types_per_cluster}
+```{r cell-types-per-cluster}
 cell_types_per_cluster <- cellTypesPerCluster(known_markers_detected)
 assignAndSaveData(
     name = paste(sce_name, "cell_types_per_cluster", sep = "_"),
@@ -171,7 +196,7 @@ assignAndSaveData(
 cell_types_per_cluster
 ```
 
-```{r plot_cell_types_per_cluster, results="asis"}
+```{r plot-cell-types-per-cluster, results="asis"}
 plotCellTypesPerCluster(
     object = sce,
     markers = cell_types_per_cluster,
