--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+## pointillism 0.3.2 (2019-04-25)
+
+### Minor changes
+
+- S4 generic reexport documentation fixes.
+
+
+
 ## pointillism 0.3.1 (2019-04-23)
 
 ### Minor changes
