--- a/inst/rmarkdown/templates/seurat-clustering/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/seurat-clustering/skeleton/skeleton.Rmd
@@ -20,9 +20,11 @@ bibliography: bibliography.bib
 ---
 
 ```{r setup, cache=FALSE, message=FALSE}
-library(Seurat)
-library(pointillism)
-library(dplyr)
+suppressPackageStartupMessages({
+    library(Seurat)
+    library(pointillism)
+    library(dplyr)
+})
 prepareTemplate(package = "pointillism")
 source("_setup.R")
 
@@ -106,10 +108,9 @@ reduced_dim_groups <- unique(c(
 First, let's create a `Seurat` object using the raw counts from the cells that have passed our quality control filtering parameters. Next, the raw counts are normalized using global-scaling normalization with the `NormalizeData()` function. This (1) normalizes the gene expression measurements for each cell by the total expression; (2) multiplies this by a scale factor (10,000 by default); and (3) log-transforms the result. Following normalization, the `FindVariableFeatures()` function is then called, which calculates the average expression and dispersion for each gene, places these genes into bins, and then calculates a z-score for dispersion within each bin. This helps control for the relationship between variability and average expression. Finally, the genes are scaled and centered using the `ScaleData()` function.
 
 ```{r initialize, results="hide"}
-object %<>%
-    NormalizeData() %>%
-    FindVariableFeatures() %>%
-    ScaleData()
+object <- NormalizeData(object)
+object <- FindVariableFeatures(object)
+object <- ScaleData(object)
 ```
 
 # Plot variable genes
@@ -133,19 +134,21 @@ data(cellCycleMarkersList, package = "pointillism")
 cell_cycle_markers <- cellCycleMarkersList[[camelCase(organism)]]
 stopifnot(is(cell_cycle_markers, "CellCycleMarkers"))
 
+## FIXME Need to take out magrittr pipe here.
 markdownHeader("S phase markers", level = 3)
-s_genes <- cell_cycle_markers %>%
-    as_tibble() %>%
-    filter(phase == "S") %>%
-    pull("geneName") %>%
+s_genes <- cell_cycle_markers %>%                                        # FIXME
+    as_tibble() %>%                                                      # FIXME
+    filter(phase == "S") %>%                                             # FIXME
+    pull("geneName") %>%                                                 # FIXME
     sort()
 print(s_genes)
 
+## FIXME Need to take out magrittr pipe here.
 markdownHeader("G2/M phase markers", level = 3)
-g2m_genes <- cell_cycle_markers %>%
-    as_tibble() %>%
-    filter(phase == "G2/M") %>%
-    pull("geneName") %>%
+g2m_genes <- cell_cycle_markers %>%                                      # FIXME
+    as_tibble() %>%                                                      # FIXME
+    filter(phase == "G2/M") %>%                                          # FIXME
+    pull("geneName") %>%                                                 # FIXME
     sort()
 print(g2m_genes)
 
@@ -275,15 +278,16 @@ To cluster the cells, Seurat next applies modularity optimization techniques suc
 
 ```{r clustering}
 ## Note that `resolution` argument supports multiple calculations.
-object %<>%
-    FindNeighbors(
-        dims = dims,
-        verbose = FALSE
-    ) %>%
-    FindClusters(
-        resolution = params$resolution_calc,
-        verbose = FALSE
-    )
+object <- FindNeighbors(
+    object,  # FIXME `object = `?
+    dims = dims,
+    verbose = FALSE
+)
+object <- FindClusters(
+    object,  # FIXME `object = `?
+    resolution = params$resolution_calc,
+    verbose = FALSE
+)
 ```
 
 # Run non-linear dimensional reduction
