Attempt to improve code coverage

--- a/inst/rmarkdown/templates/seurat-per-cluster-analysis/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/seurat-per-cluster-analysis/skeleton/skeleton.Rmd
@@ -18,7 +18,7 @@ suppressPackageStartupMessages({
     library(dplyr)
     library(pointillism)
 })
-prepareTemplate(package = "pointillism")
+prepareTemplate()
 source("_setup.R")
 ```
 
